Fixed alignment in footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -169,7 +169,7 @@ top: 1px;
 	margin-top: 0px;
 	margin-bottom: 16px;
 	padding: 16px 16px 16px 16px;
-	
+
 }
 
 .form-horizontal .button-contact {
@@ -251,8 +251,37 @@ top: 1px;
 }
 
 /* FOOTER CONTENT */
+
+/* CENTER BOX */
+.inner-dashed-line {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.number {
+  font-size: 27px;
+  flex: 1 1 auto;
+  font-weight: bold;
+}
+
+.year {
+  font-size: 12px;
+}
+
+.footer-parent {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  float:left;
+}
+
 .solid-line h6 {
   float: left;
+  line-height: 20px;
+  padding-left: 7px;
 }
 
 .logo {
